Update Tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,9 @@ set -g base-index 1
 unbind-key l
 bind-key Escape last-window
 
+# Make window name fixed
+set-option -g allow-rename off
+
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
@@ -27,7 +30,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-strategy-nvim 'session'
 
 # mouse behavior
-set -g mouse-utf8 on
 set -g mouse on
 
 set-option -g default-terminal screen-256color
@@ -85,19 +87,31 @@ set-window-option -g display-panes-time 1500
 # Status Bar
 set-option -g status-interval 1
 set-option -g status-left ''
-set-option -g status-right '%l:%M%p'
-set-window-option -g window-status-current-fg magenta
-set-option -g status-fg default
+set-option -g status-right '#[fg=colour196,bright]Up #(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=black]• #[fg=colour196,bright]%d/%m %H:%M#[default] '
+# set-option -g status-right '%l:%M%p'
+set-option -g status-fg black
+set-window-option -g window-status-current-fg colour166
+set-window-option -g window-status-fg black
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
+
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
+
+set-option -g pane-border-fg white
+set-option -g pane-border-bg default
+set-option -g pane-active-border-fg green
+set-option -g pane-active-border-bg default
 
 # Status Bar solarized-dark (default)
-set-option -g status-bg black
-set-option -g pane-active-border-fg black
-set-option -g pane-border-fg black
+set-option -g status-bg green
+set-option -g pane-active-border-fg green
+set-option -g pane-border-fg green
 
 # Status Bar solarized-light
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg white"
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-active-border-fg white"
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-border-fg white"
+if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg green"
+if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-active-border-fg green"
+if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-border-fg green"
 
 # Set window notifications
 setw -g monitor-activity on
