--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,26 +8,48 @@ set -g base-index 1
 unbind-key l
 bind-key Escape last-window
 
+set -g bell-action none
+set -g visual-bell off
+set -g display-panes-time 2000
+set -g mouse on
+
+bind "C-d" detach
+bind "C-t" last-window
+
+# Join pane command - https://unix.stackexchange.com/a/14301/16225
+bind "g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
+bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
+
+# Vim-like bindings
+setw -g mode-keys vi
+bind "n" next-window
+bind "p" previous-window
+bind "C-n" next-window
+bind "C-p" previous-window
+bind "s" split-window -v
+bind "v" split-window -h
+bind "j" select-pane -D
+bind "k" select-pane -U
+bind "h" select-pane -L
+bind "l" select-pane -R
+bind -r "C-j" select-pane -D
+bind -r "C-k" select-pane -U
+bind -r "C-h" select-pane -L
+bind -r "C-l" select-pane -R
+bind "=" select-layout tiled
+bind "!" break-pane
+bind \; choose-tree
+
+# Screen-like bindings
+bind '"' choose-window
+bind "A" command-prompt "rename-window '%%'"
+bind "Escape" copy-mode
+
 # Make window name fixed
 set-option -g allow-rename off
 
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
-
-# vi is good
-setw -g mode-keys vi
-
-# Install a list of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-
-# Resurrect after restart
-# To save session: prefix + C-s
-# To restore session: prefix + C-r
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-
-# Save nvim session as well
-set -g @resurrect-strategy-nvim 'session'
 
 # mouse behavior
 set -g mouse on
@@ -41,22 +63,6 @@ bind-key L clear-history
 bind-key space next-window
 bind-key bspace previous-window
 bind-key enter next-layout
-
-# use vim-like keys for splits and windows
-bind-key v split-window -h -c "#{pane_current_path}"
-bind-key s split-window -v -c "#{pane_current_path}"
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-
-# uncomment below stanza to enable smart pane switching with awareness of vim splits
-# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
-# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
-# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
-# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
-# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
-# bind C-l send-keys 'C-l'
 
 bind-key C-o rotate-window
 
@@ -74,51 +80,44 @@ bind-key T previous-window
 bind-key [ copy-mode
 bind-key ] paste-buffer
 
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# OSX clipboard fixes - https://gist.github.com/algesten/0ba2d7c19763db6a7396126e8526b65b
+# The `reattach-to-user-namespace` command is no longer needed as of tmux-2.6.
+unbind-key -T copy-mode-vi M-w
+bind-key -T copy-mode-vi C-w send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X stop-selection
 
 set-window-option -g display-panes-time 1500
 
 # Status Bar
-set-option -g status-interval 1
-set-option -g status-left ''
-set-option -g status-right '#[fg=colour196,bright]Up #(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=black]• #[fg=colour196,bright]%d/%m %H:%M#[default] '
-# set-option -g status-right '%l:%M%p'
-set-option -g status-fg black
-set-window-option -g window-status-current-fg colour166
-set-window-option -g window-status-fg black
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
 
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
-
-set-option -g pane-border-fg white
-set-option -g pane-border-bg default
-set-option -g pane-active-border-fg green
-set-option -g pane-active-border-bg default
-
-# Status Bar solarized-dark (default)
-set-option -g status-bg green
-set-option -g pane-active-border-fg green
-set-option -g pane-border-fg green
-
-# Status Bar solarized-light
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg green"
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-active-border-fg green"
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-border-fg green"
-
-# Set window notifications
-setw -g monitor-activity on
-set -g visual-activity on
-
-# Enable native Mac OS X copy/paste
-set-option -g default-command "/bin/bash -c 'which reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace $SHELL -l || exec $SHELL -l'"
+set -g status-interval 0
+set -g status-fg colour240
+set -g status-bg colour233
+set -g status-left "#[fg=colour242] #{host} "
+set -g status-right "#[fg=colour242]:#{session_name}:#{window_index}.#{pane_index} "
+set -g window-status-format "#[bg=colour233,fg=colour240]  ⋅#I⋅ #W "
+set -g window-status-current-format "#[bg=colour233,fg=colour240,nobold] [#I] #W #[fg=black,bg=colour233,nobold]"
+set -g window-status-current-bg colour39
+set -g window-status-current-fg colour235
+set -g window-status-activity-bg colour245 # fg and bg are flipped here due to
+set -g window-status-activity-fg colour233 # a bug in tmux
+set -g window-status-separator ""
+set -g status-justify centre
+set -g pane-border-bg default
+set -g pane-border-fg colour238
+set -g pane-active-border-bg default
+set -g pane-active-border-fg colour39
+set -g display-panes-colour colour233
+set -g display-panes-active-colour colour245
+set -g clock-mode-colour colour39
+set -g clock-mode-style 24
+set -g message-bg black
+set -g message-fg colour39
+set -g message-command-bg colour233
+set -g message-command-fg black
+set -g mode-bg colour39
+set -g mode-fg colour232
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
