--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,7 @@
 # use backtick
 unbind-key C-b
-set-option -g prefix `
-bind-key ` send-prefix
-set -g base-index 1
-
-# use Esc to switch between windows
-unbind-key l
-bind-key Escape last-window
+set-option -g prefix C-w
+bind-key C-w send-prefix
 
 set -g bell-action none
 set -g visual-bell off
@@ -14,7 +9,6 @@ set -g display-panes-time 2000
 set -g mouse on
 
 bind "C-d" detach
-bind "C-t" last-window
 
 # Join pane command - https://unix.stackexchange.com/a/14301/16225
 bind "g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
@@ -24,6 +18,8 @@ bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
 setw -g mode-keys vi
 bind "n" next-window
 bind "p" previous-window
+bind "l" last-window
+bind "o" rotate-window
 bind "C-n" next-window
 bind "C-p" previous-window
 bind "s" split-window -v
@@ -64,8 +60,6 @@ bind-key space next-window
 bind-key bspace previous-window
 bind-key enter next-layout
 
-bind-key C-o rotate-window
-
 bind-key + select-layout main-horizontal
 bind-key = select-layout main-vertical
 set-window-option -g other-pane-height 25
@@ -79,13 +73,6 @@ bind-key T previous-window
 
 bind-key [ copy-mode
 bind-key ] paste-buffer
-
-# OSX clipboard fixes - https://gist.github.com/algesten/0ba2d7c19763db6a7396126e8526b65b
-# The `reattach-to-user-namespace` command is no longer needed as of tmux-2.6.
-unbind-key -T copy-mode-vi M-w
-bind-key -T copy-mode-vi C-w send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X stop-selection
 
 set-window-option -g display-panes-time 1500
 
@@ -132,6 +119,13 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 set-option -g assume-paste-time 0
 
 source-file ~/.tmux.conf.local
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
