--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,10 +24,10 @@ bind "C-n" next-window
 bind "C-p" previous-window
 bind "s" split-window -v
 bind "v" split-window -h
-bind "j" select-pane -D
-bind "k" select-pane -U
-bind "h" select-pane -L
-bind "l" select-pane -R
+# bind "j" select-pane -D
+# bind "k" select-pane -U
+# bind "h" select-pane -L
+# bind "l" select-pane -R
 bind -r "C-j" select-pane -D
 bind -r "C-k" select-pane -U
 bind -r "C-h" select-pane -L
@@ -35,6 +35,10 @@ bind -r "C-l" select-pane -R
 bind "=" select-layout tiled
 bind "!" break-pane
 bind \; choose-tree
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
 
 # Screen-like bindings
 bind '"' choose-window
@@ -51,6 +55,7 @@ bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 set -g mouse on
 
 set-option -g default-terminal screen-256color
+set-option -g history-limit 30000
 
 bind-key : command-prompt
 bind-key r refresh-client
@@ -129,3 +134,4 @@ set -g @plugin 'tmux-plugins/tmux-open'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
